Fixes potential spacing issue on welcome username heading

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,6 +27,7 @@ header {
 
 .welcome-greeting {
   font-size: 40px;
+  margin-left: 1em;
 }
 
 .link-to-login {
@@ -34,6 +35,7 @@ header {
   margin-top: .5em;
   border: 1px solid black;
   width: 18%;
+  min-width: 7em;
   text-align: center;
   transition-duration: 300ms;
 }
@@ -92,4 +94,8 @@ a {
   align-items: flex-end;
   height: 100%;
   width: 50%;
+}
+
+.search-button {
+  min-width: 7em;
 }
